crates/core/tests/ui/typed_macro/fail/verify_live_row_mismatch.rs
fn main() {
    let _ = babar::query!(
        "SELECT 1::int4 AS id",
        params = (),
        row = (babar::codec::text,),
    );
}
